--- a/homeworks/week11/hw1/style.css
+++ b/homeworks/week11/hw1/style.css
@@ -77,7 +77,7 @@ body {
 .board {
 	background: white;
 	padding: 15px;
-	width: 54%;
+	width: 75%;
   margin: 25px auto;
   border-radius: 15px;	
   box-shadow: rgb(0 0 0 / 4%) 0px 3px 5px;
@@ -137,7 +137,7 @@ body {
 }
 
 .wrapper{
-	width: 70%;
+	width: 80%;
   margin: 0 auto;
 }
 
@@ -175,11 +175,28 @@ body {
   color: #01366A;
 }
 
+/*login*/
+.board__login-height {
+    position: relative;
+    height: 400px;
+}
+
+.board__login-css {
+	position: absolute;
+  left: 50%;
+  transform: translate(-50%);
+}
+
  /*register*/
 	.board__input-area {
     display: block;
     margin: 20px auto 10px; 
-    width: 60%;
+    width: 320px;
+}
+
+.board__register-height {
+    position: relative;
+    height: 500px;
 }
 
 .board__row {
