--- a/homeworks/week13/hw3/style.css
+++ b/homeworks/week13/hw3/style.css
@@ -12,7 +12,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-	height: 44px;
+	/* height: 44px; */
 }
 
 .navbar__site-name {
