增加 CSS error 錯誤訊息提示

--- a/homeworks/week13/hw1/main.scss
+++ b/homeworks/week13/hw1/main.scss
@@ -273,4 +273,10 @@ p {
 		@include image-size(45px, none);
 		cursor: pointer;  
 	}
+	&__error {
+		font-size: 16px;
+		text-align: center;
+		color: red;
+		margin: 5px;
+	}
 }
